# mdc-rs

./: .gitignore  README.md  demo_bg.92c2f61b.wasm  demo_bg.d36dd9e4.wasm  index.html  static.77de5100.js  static.77de5100.js.map  static.783b3e2d.js  static.783b3e2d.js.map  styles.164d45a1.css  styles.164d45a1.css.map  styles.164d45a1.js  styles.ca9cf1d2.css  styles.ca9cf1d2.css.map
crates/mdc-sys/: Cargo.toml  README.md
crates/mdc-sys/src/: lib.rs
crates/mdc-yew/: Cargo.toml  README.md
crates/mdc-yew/examples/demo/: Cargo.toml
crates/mdc-yew/examples/demo/src/routes/: home.rs
crates/mdc-yew/src/components/: button.rs
examples/full/: Cargo.toml
examples/full/static/: styles.scss
examples/minimal/: Cargo.toml  package.json
examples/minimal/src/routes/: home.rs
