[package]
name = "mdc-sys"
version = "0.1.1"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"
categories = ["wasm"]
keywords = ["wasm", "mdc"]
description = "Wasm binding for Material Design Components."
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/jetli/mdc-rs.git"
homepage = "https://github.com/jetli/mdc-rs"
documentation = "https://github.com/jetli/mdc-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3"
features = [
    "Element",
    "Window",
    "Document",
    "Event",
]