[package]
name = "mdc-yew"
version = "0.1.1"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"
categories = ["wasm"]
keywords = ["wasm", "mdc"]
description = "Material Design Components for the Yew framework."
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/jetli/mdc-rs.git"
homepage = "https://github.com/jetli/mdc-rs"
documentation = "https://github.com/jetli/mdc-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdc-sys = { path = "../mdc-sys", version = "0.1.1"}
yew = { version="0.14.1", features = ["web_sys"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",
]