[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2018"
license = "Apache-2.0/MIT"
name = "demo"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
mdc-yew = { path = "../.."}
web_logger = "0.2"
yew = "0.10.0"
yew-router = "0.7.0"
wasm-bindgen = "0.2.56"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.6"